2011-12-02  Ingo Renner  <ingo@typo3.org>

	* Added logging in all services

2011-10-27  Ingo Renner  <ingo@typo3.org>

	* Added support for text extraction from zip files
	* Added support for meta data extraction from zip files
	* Added support for text extraction from tgz files
	* Added support for meta data extraction from tgz files

2011-10-24  Ingo Renner  <ingo@typo3.org>

	* Added unit test for language detection

2011-10-21  Ingo Renner  <ingo@typo3.org>

	* Added support for aiff audio files

2011-10-10  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #28922: TIKA class is not accepted if not in TYPO3 path (credits Michael Knoll)

2011-07-27  Ingo Renner  <ingo@typo3.org>

	* Release of version 1.1.0

	* Changed Tika path resolution to use t3lib_div::getFileAbsFileName() (credits Peter Kraume)

2011-06-15  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #27473: wrong height and width pixels in DAM (credits Ivan Kartolo)

2011-04-20 Ingo Renner  <ingo@typo3.org>

	* Added support for curl HTTP transport

2011-04-19 Ingo Renner  <ingo@typo3.org>

	* Fixed missing XCLASS in tx_tika_StatusCheck
	* Fixed wrong entry in ext_autoload.php for class tx_tika_StatusCheck

2011-04-06 Ingo Renner  <ingo@typo3.org>

	* Added EXT:tika configuration checking when clearing the configuration cache

2010-10-18 Ingo Renner  <ingo@typo3.org>

	* Fixed the manual rendering / headline structure... <put some OOo is crap rant here>

2010-10-15 Ingo Renner  <ingo@typo3.org>

	* Fixed rendering of the first paragraph in the manual
	* Changed extension status to stable

2010-10-14 Ingo Renner  <ingo@typo3.org>

	* Release of version 1.0.0

	* Added a registry entry to store whether tika is available - which is the case if it is detected to be configured properly
	* Changed required executable for the services to be determined dynamically, based on whether Tika or Solr is used for extraction
	* Added a minimal manual, pointing to the forge wiki

2010-10-13 Ingo Renner  <ingo@typo3.org>
